# composable-agents

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTORS_GUIDE.md  Makefile  OPEN_SOURCE_GUIDE.md  PLATFORM_USER_GUIDE.md  README.md  TYPESPEC_REFERENCE.md  a2a-llms.txt  diagrams.txt  mcp-llms.txt  package.json  pyproject.toml  tspconfig.yaml
agents_api/: CLAUDE.md  __init__.py
agents_api/memory/: cognitive.py
agents_api/models/: __init__.py  database.py
agents_api/workflows/: orchestration.py
cli/src/: main.py
composable_agents/: __init__.py  agent.py  agent_loop.py  cli.py  define.py  deploy.py  dotctx.py  dotctx_evals.py  dotctx_rich.py  dotctx_yglu.py  dsl.py  ir.py  transcript.py  turn.py
composable_agents/ca/: _resolve_child.py  cli.py  config.py  deploy.py  evalrun.py  queues.py  resolve.py  runner.py  schedule.py  temporal_run.py
composable_agents/execution/: cma.py  dbos_backend.py  effects.py  harness.py  llm.py  (+4 more)
deployment/: CLAUDE.md  README.md
src/: CLAUDE.md  __init__.py  database.py
tests/: test_agent_native_tools.py  test_define_frontend.py  test_dotctx_evals.py  test_dotctx_reply.py  test_dotctx_rich.py  test_dotctx_single_file.py  test_dotctx_yglu.py  test_e2e_temporal.py  test_llm_effort.py  test_llm_fallback_recorded.py  test_llm_native_tools.py  test_llm_output_retries.py  test_llm_prompt_cache.py  test_memmcp_compat.py  test_object_first_reasoners.py  test_openai_batch.py  test_round_note.py  test_serve.py  test_settings_effort.py  test_switch_on.py
typespec/: CLAUDE.md  main.tsp
(+46 files in other folders)
